# advent_of_code

./: .gitignore  README.md  azure-pipeline.yml
.github/workflows/: dotnet.yml  rust.yml
01/: part1_test.py  part2_test.py
02/: part2_test.py
03/: part2_test.py
2015/python/04/: part1_test.py
2015/python/05/: part1_test.py
dotnet/: README.md  aoc.sln  global.json  new.cmd
dotnet/Generator/: Generator.csproj  Program.cs
dotnet/Solver/: Base.cs  ISolver.cs  Solver.csproj
dotnet/Solver/2015/: Day01.cs  Day1.cs  Day2.cs  Day3.cs  Day4.cs
dotnet/Solver/2020/: Day1.cs  Day2.cs  Day3.cs  Day4.cs  Day5.cs  Day6.cs
dotnet/Solver/2021/: Day01.cs  Day02.cs  Day05.cs  Day06.cs  Day09.cs  Day1.cs  Day10.cs  Day2.cs  Day3.cs  Day4.cs  Day5.cs  Day6.cs  (+3 more)
dotnet/Solver2020/: Base.cs  Day1.cs  Day2.cs  Day3.cs  Day4.cs  ExpenseReportFixer.cs  Solver2020.csproj
dotnet/Solver2020Tests/: Day1Test.cs  Day2Test.cs  Day3Test.cs  Day4Test.cs  Solver2020Tests.csproj  TestBase.cs  Tester.csproj
dotnet/SolverBase/: Base.cs  ISolver.cs  SolverBase.csproj
dotnet/Tester/: TestBase.cs  Tester.csproj
python/: .EditorConfig
ruby/: .editorconfig  .rspec  Gemfile
ruby/2019/: day01.rb  day01_spec.rb  fuel.rb  fuel_spec.rb  intcoder.rb  intcoder_spec.rb
src/: new_dotnet.cmd
src/elixir/: README.md
src/python/: template.py
src/ruby/: Guardfile
src/rust/: Cargo.toml
src/rust/aoc/: Cargo.toml
src/rust/aoc/examples/: cookies.rs  input.rs  largest.rs  md5.rs  moz_token.rs
src/rust/aoc/src/: aoc_client.rs  auth.rs  cookies.rs  gen.rs  lib.rs  login.rs  main.rs
(+150 files in other folders)
