[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
directories = "4.0.1"
dirs = "4.0.0"
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["serde_derive", "derive"] }
toml = "0.5.9"
